--- a/login.html
+++ b/login.html
@@ -1,73 +1,54 @@
-/* 全局样式 */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>登录 | Shop</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module">
+        // Firebase SDK
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
+        import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
 
-/* 登录页面背景 */
-body {
-    background: linear-gradient(135deg, #FF6B6B, #556270);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+        // Firebase 配置
+        const firebaseConfig = {
+            apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
+            authDomain: "shop-87351.firebaseapp.com",
+            projectId: "shop-87351",
+            storageBucket: "shop-87351.appspot.com",
+            messagingSenderId: "994764608061",
+            appId: "1:994764608061:web:e7a5a041cd3e082daad054"
+        };
 
-/* 登录框 */
-.login-container {
-    text-align: center;
-}
+        // 初始化 Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const provider = new GoogleAuthProvider();
 
-.login-box {
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    width: 350px;
-}
-
-/* 标题 */
-h2 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-/* 品牌名称 */
-.brand-name {
-    color: #FF6B6B;
-    font-weight: bold;
-}
-
-/* 文字 */
-p {
-    color: #666;
-    margin-bottom: 20px;
-}
-
-/* Google 登录按钮 */
-.google-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    background: white;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 16px;
-}
-
-.google-btn img {
-    width: 20px;
-    margin-right: 10px;
-}
-
-/* 按钮悬停效果 */
-.google-btn:hover {
-    background: #f5f5f5;
-}
+        // 处理 Google 登录
+        document.addEventListener("DOMContentLoaded", () => {
+            document.getElementById("google-login").addEventListener("click", () => {
+                signInWithPopup(auth, provider)
+                    .then((result) => {
+                        console.log("登录成功", result.user);
+                        window.location.href = "home.html"; // 登录成功跳转
+                    })
+                    .catch((error) => {
+                        console.error("登录失败", error);
+                    });
+            });
+        });
+    </script>
+</head>
+<body>
+    <div class="login-container">
+        <div class="login-box">
+            <h2>欢迎来到 <span class="brand-name">Shop</span></h2>
+            <p>登录以开始您的购物之旅</p>
+            <button id="google-login" class="google-btn">
+                <img src="google-icon.png" alt="Google Logo"> 使用 Google 登录
+            </button>
+        </div>
+    </div>
+</body>
+</html>
