--- a/register.html
+++ b/register.html
@@ -29,6 +29,7 @@
         // 监听用户状态
         onAuthStateChanged(auth, (user) => {
             if (user) {
+                document.getElementById("user-photo").src = user.photoURL || "default-avatar.png"; 
                 document.getElementById("user-name").value = user.displayName; // 自动填充姓名
             } else {
                 window.location.href = "login.html"; // 未登录跳转
@@ -67,7 +68,9 @@
 <body>
     <div class="register-container">
         <div class="register-card">
+            <img id="user-photo" src="default-avatar.png" alt="用户头像" class="user-avatar">
             <h2>完善个人信息</h2>
+            <p>请填写您的联系方式，以便我们为您提供更好的服务</p>
             <input type="text" id="user-name" placeholder="姓名（自动填充）" disabled>
             <input type="text" id="user-phone" placeholder="请输入电话号码">
             <input type="text" id="user-address" placeholder="请输入地址">
