--- a/home.html
+++ b/home.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品列表 | Shop</title>
+    <title>主页 | Shop</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>欢迎来到 Shop</h1>
+    </header>
+    <div class="home-container">
+        <h2>您好，<span id="user-name">用户</span>！</h2>
+        <p>欢迎来到我们的在线商店，开始您的购物之旅吧！</p>
+        <a href="shop.html" class="start-shopping-btn">🛒 开始购物</a>
+    </div>
     <script type="module">
-        // Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
-        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
-
-        // Firebase 配置
+        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
+        
         const firebaseConfig = {
             apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
             authDomain: "shop-87351.firebaseapp.com",
@@ -20,47 +28,16 @@
             appId: "1:994764608061:web:e7a5a041cd3e082daad054"
         };
 
-        // 初始化 Firebase
         const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
+        const auth = getAuth(app);
 
-        // 加载商品列表
-        async function loadProducts() {
-            const productList = document.getElementById("product-list");
-            const querySnapshot = await getDocs(collection(db, "products"));
-
-            querySnapshot.forEach((doc) => {
-                const product = doc.data();
-                const productItem = document.createElement("div");
-                productItem.classList.add("product");
-
-                productItem.innerHTML = `
-                    <img src="${product.image}" alt="${product.name}">
-                    <h3>${product.name}</h3>
-                    <p>¥${product.price}</p>
-                    <button onclick="addToCart('${doc.id}', '${product.name}', ${product.price}, '${product.image}')">加入购物车</button>
-                `;
-
-                productList.appendChild(productItem);
-            });
-        }
-
-        document.addEventListener("DOMContentLoaded", loadProducts);
-
-        // 加入购物车
-        window.addToCart = function (id, name, price, image) {
-            let cart = JSON.parse(localStorage.getItem("cart")) || [];
-            cart.push({ id, name, price, image });
-            localStorage.setItem("cart", JSON.stringify(cart));
-            alert("已加入购物车！");
-        };
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                document.getElementById("user-name").innerText = user.displayName || "用户";
+            } else {
+                window.location.href = "login.html"; // 未登录跳转
+            }
+        });
     </script>
-</head>
-<body>
-    <header>
-        <h1>商品列表</h1>
-        <a href="cart.html" class="cart-btn">🛒 购物车</a>
-    </header>
-    <div id="product-list" class="product-container"></div>
 </body>
 </html>
