--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
         import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
 
+        // Firebase 配置
         const firebaseConfig = {
             apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
             authDomain: "shop-87351.firebaseapp.com",
@@ -18,9 +19,11 @@
             appId: "1:994764608061:web:e7a5a041cd3e082daad054"
         };
 
+        // 初始化 Firebase
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
+        // 获取 Firestore 里的商品数据
         async function loadProducts() {
             const productList = document.getElementById("product-list");
             const querySnapshot = await getDocs(collection(db, "products"));
@@ -33,7 +36,7 @@
                 productItem.innerHTML = `
                     <img src="${product.image}" alt="${product.name}">
                     <h3>${product.name}</h3>
-                    <p>¥${product.price}</p>
+                    <p>💰 ¥${product.price}</p>
                     <button onclick="addToCart('${doc.id}', '${product.name}', ${product.price}, '${product.image}')">加入购物车</button>
                 `;
 
@@ -41,8 +44,10 @@
             });
         }
 
+        // 页面加载时调用
         document.addEventListener("DOMContentLoaded", loadProducts);
 
+        // 加入购物车（存储到 localStorage）
         window.addToCart = function (id, name, price, image) {
             let cart = JSON.parse(localStorage.getItem("cart")) || [];
             cart.push({ id, name, price, image });
@@ -57,6 +62,7 @@
         <a href="home.html">⬅ 返回主页</a>
         <a href="cart.html" class="cart-btn">🛒 购物车</a>
     </header>
+    
     <div id="product-list" class="product-container"></div>
 </body>
 </html>
