--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品列表 | Shop</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 全局样式 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f8f8f8;
+            text-align: center;
+        }
+
+        /* 头部样式 */
+        header {
+            background: #FF6B6B;
+            color: white;
+            padding: 15px;
+            font-size: 22px;
+        }
+
+        header a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+
+        /* 商品列表 */
+        .product-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
+
+        /* 商品卡片 */
+        .product {
+            background: white;
+            border-radius: 10px;
+            padding: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .product:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+        }
+
+        .product img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .product h3 {
+            font-size: 18px;
+            margin: 10px 0;
+        }
+
+        .product p {
+            font-size: 16px;
+            color: #FF6B6B;
+            font-weight: bold;
+        }
+
+        /* 加入购物车按钮 */
+        .product button {
+            background: linear-gradient(to right, #FF6B6B, #E64A4A);
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background 0.3s;
+        }
+
+        .product button:hover {
+            background: linear-gradient(to right, #E64A4A, #C84040);
+        }
+
+        /* 购物车按钮 */
+        .cart-btn {
+            display: inline-block;
+            padding: 10px 15px;
+            background: #FF6B6B;
+            color: white;
+            font-size: 16px;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .cart-btn:hover {
+            background: #E64A4A;
+        }
+    </style>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
         import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
@@ -58,7 +157,7 @@
 </head>
 <body>
     <header>
-        <h1>商品列表</h1>
+        <h1>🛍️ 商品列表</h1>
         <a href="home.html">⬅ 返回主页</a>
         <a href="cart.html" class="cart-btn">🛒 购物车</a>
     </header>
