--- a/shop.html
+++ b/shop.html
@@ -29,10 +29,10 @@
             font-size: 18px;
         }
 
-        /* 商品列表 */
+        /* 商品列表（3 列布局） */
         .product-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 20px;
             padding: 20px;
             max-width: 1200px;
@@ -46,6 +46,7 @@
             padding: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease-in-out;
+            text-align: center;
         }
 
         .product:hover {
@@ -87,22 +88,6 @@
         .product button:hover {
             background: linear-gradient(to right, #E64A4A, #C84040);
         }
-
-        /* 购物车按钮 */
-        .cart-btn {
-            display: inline-block;
-            padding: 10px 15px;
-            background: #FF6B6B;
-            color: white;
-            font-size: 16px;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: 0.3s;
-        }
-
-        .cart-btn:hover {
-            background: #E64A4A;
-        }
     </style>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
@@ -129,14 +114,18 @@
 
             querySnapshot.forEach((doc) => {
                 const product = doc.data();
+
+                // 确保图片链接有效
+                const imageUrl = product.image.startsWith("http") ? product.image : "default-placeholder.jpg";
+
                 const productItem = document.createElement("div");
                 productItem.classList.add("product");
 
                 productItem.innerHTML = `
-                    <img src="${product.image}" alt="${product.name}">
+                    <img src="${imageUrl}" alt="${product.name}" onerror="this.src='default-placeholder.jpg'">
                     <h3>${product.name}</h3>
                     <p>💰 ¥${product.price}</p>
-                    <button onclick="addToCart('${doc.id}', '${product.name}', ${product.price}, '${product.image}')">加入购物车</button>
+                    <button onclick="addToCart('${doc.id}', '${product.name}', ${product.price}, '${imageUrl}')">加入购物车</button>
                 `;
 
                 productList.appendChild(productItem);
