--- a/shop.html
+++ b/shop.html
@@ -54,10 +54,11 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
         }
 
+        /* ✅ 修正图片比例 */
         .product img {
             width: 100%;
-            height: 200px;
-            object-fit: cover;
+            height: 200px; /* 统一高度 */
+            object-fit: cover; /* 让图片填满格子，不变形 */
             border-radius: 8px;
         }
 
