--- a/cart.html
+++ b/cart.html
@@ -111,23 +111,35 @@
     document.addEventListener("DOMContentLoaded", function () {
         let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
+        // 处理相同商品合并
+        let mergedCart = {};
+        cart.forEach(item => {
+            if (mergedCart[item.name]) {
+                mergedCart[item.name].quantity += 1;  // 相同商品数量 +1
+            } else {
+                mergedCart[item.name] = { ...item, quantity: 1 };
+            }
+        });
+
+        let cartArray = Object.values(mergedCart); // 转换回数组
+        localStorage.setItem("cart", JSON.stringify(cartArray)); // 更新 localStorage
+
         function renderCart() {
             let cartBody = document.getElementById("cart-body");
             let cartTotal = document.getElementById("cart-total");
             cartBody.innerHTML = "";
             let total = 0;
 
-            cart.forEach((item, index) => {
-                let quantity = item.quantity || 1;  // 确保 quantity 存在
-                let price = parseFloat(item.price) || 0; // 确保 price 是数字
-                let itemTotal = price * quantity;
+            cartArray.forEach((item, index) => {
+                let price = parseFloat(item.price) || 0;
+                let itemTotal = price * item.quantity;
                 total += itemTotal;
 
                 let row = document.createElement("tr");
                 row.innerHTML = `
                     <td>${item.name}</td>
                     <td>¥${price.toFixed(2)}</td>
-                    <td class="quantity">${quantity}</td>
+                    <td class="quantity">${item.quantity}</td>
                     <td>¥${itemTotal.toFixed(2)}</td>
                     <td>
                         <button class="remove-btn" data-index="${index}">删除</button>
@@ -137,14 +149,15 @@
                 cartBody.appendChild(row);
             });
 
-            cartTotal.textContent = total.toFixed(2);
+            cartTotal.textContent = `¥${total.toFixed(2)}`;
         }
 
+        // 删除商品
         document.getElementById("cart-body").addEventListener("click", function (event) {
             if (event.target.classList.contains("remove-btn")) {
                 let index = event.target.getAttribute("data-index");
-                cart.splice(index, 1);
-                localStorage.setItem("cart", JSON.stringify(cart));
+                cartArray.splice(index, 1);
+                localStorage.setItem("cart", JSON.stringify(cartArray));
                 renderCart();
             }
         });
@@ -152,5 +165,6 @@
         renderCart();
     });
 </script>
+
 </body>
 </html>
