--- a/cart.html
+++ b/cart.html
@@ -4,30 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>购物车 | Shop</title>
-
-    <style>
-    .home-btn {
-        background-color: #007bff;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin-top: 10px;
-    }
-
-    .home-btn:hover {
-        background-color: #0056b3;
-    }
-</style>
-
-<!-- 结账按钮 -->
-<button class="checkout-btn">结账</button>
-
-<!-- 返回首页按钮 -->
-<button class="home-btn" onclick="goHome()">返回首页</button>
-
 <script>
     function goHome() {
         window.location.href = "shop.html"; // 修改为你的首页路径
@@ -133,8 +109,30 @@
             </tbody>
         </table>
 
-        <p class="total">总计: ¥<span id="cart-total">0</span></p>
-        <button class="checkout-btn">结账</button>
+        <p class="total">总计: RM<span id="cart-total">0</span></p>
+            <style>
+    .home-btn {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+
+    .home-btn:hover {
+        background-color: #0056b3;
+    }
+</style>
+
+<!-- 结账按钮 -->
+<button class="checkout-btn">结账</button>
+
+<!-- 返回首页按钮 -->
+<button class="home-btn" onclick="goHome()">返回首页</button>
+
     </div>
 
 <script>
