--- a/cart.html
+++ b/cart.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>购物车 | Shop</title>
-<script>
-    function goHome() {
-        window.location.href = "shop.html"; // 修改为你的首页路径
-    }
-</script>
-
+    <script>
+        function goHome() {
+            window.location.href = "shop.html"; // 修改为你的首页路径
+        }
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,8 +51,24 @@
         }
 
         .quantity {
-            font-size: 16px;
-            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .quantity-btn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 5px;
+            cursor: pointer;
+            border-radius: 3px;
+            width: 25px;
+            margin: 0 5px;
+        }
+
+        .quantity-btn:hover {
+            background-color: #0056b3;
         }
 
         .remove-btn {
@@ -88,6 +103,21 @@
         .checkout-btn:hover {
             background-color: #218838;
         }
+
+        .home-btn {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+
+        .home-btn:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -109,30 +139,13 @@
             </tbody>
         </table>
 
-        <p class="total">总计: RM<span id="cart-total">0</span></p>
-            <style>
-    .home-btn {
-        background-color: #007bff;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin-top: 10px;
-    }
+        <p class="total">总计: ¥<span id="cart-total">0</span></p>
 
-    .home-btn:hover {
-        background-color: #0056b3;
-    }
-</style>
+        <!-- 结账按钮 -->
+        <button class="checkout-btn">结账</button>
 
-<!-- 结账按钮 -->
-<button class="checkout-btn">结账</button>
-
-<!-- 返回首页按钮 -->
-<button class="home-btn" onclick="goHome()">返回首页</button>
-
+        <!-- 返回首页按钮 -->
+        <button class="home-btn" onclick="goHome()">返回首页</button>
     </div>
 
 <script>
@@ -143,14 +156,14 @@
         let mergedCart = {};
         cart.forEach(item => {
             if (mergedCart[item.name]) {
-                mergedCart[item.name].quantity += 1;  // 相同商品数量 +1
+                mergedCart[item.name].quantity += 1;
             } else {
                 mergedCart[item.name] = { ...item, quantity: 1 };
             }
         });
 
-        let cartArray = Object.values(mergedCart); // 转换回数组
-        localStorage.setItem("cart", JSON.stringify(cartArray)); // 更新 localStorage
+        let cartArray = Object.values(mergedCart);
+        localStorage.setItem("cart", JSON.stringify(cartArray));
 
         function renderCart() {
             let cartBody = document.getElementById("cart-body");
@@ -167,7 +180,11 @@
                 row.innerHTML = `
                     <td>${item.name}</td>
                     <td>¥${price.toFixed(2)}</td>
-                    <td class="quantity">${item.quantity}</td>
+                    <td class="quantity">
+                        <button class="quantity-btn" data-index="${index}" data-action="decrease">-</button>
+                        <span>${item.quantity}</span>
+                        <button class="quantity-btn" data-index="${index}" data-action="increase">+</button>
+                    </td>
                     <td>¥${itemTotal.toFixed(2)}</td>
                     <td>
                         <button class="remove-btn" data-index="${index}">删除</button>
@@ -177,8 +194,26 @@
                 cartBody.appendChild(row);
             });
 
-            cartTotal.textContent = `¥${total.toFixed(2)}`;
+            cartTotal.textContent = total.toFixed(2);
         }
+
+        // 修改商品数量
+        document.getElementById("cart-body").addEventListener("click", function (event) {
+            let index = event.target.getAttribute("data-index");
+            let action = event.target.getAttribute("data-action");
+
+            if (action === "increase") {
+                cartArray[index].quantity += 1;
+            } else if (action === "decrease") {
+                cartArray[index].quantity -= 1;
+                if (cartArray[index].quantity <= 0) {
+                    cartArray.splice(index, 1);
+                }
+            }
+
+            localStorage.setItem("cart", JSON.stringify(cartArray));
+            renderCart();
+        });
 
         // 删除商品
         document.getElementById("cart-body").addEventListener("click", function (event) {
